Bug 124463 - FILESAVE XLSX Align Data series changes
Summary: FILESAVE XLSX Align Data series changes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-04-01 08:26 UTC by NISZ LibreOffice Team
Modified: 2019-04-09 14:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODS file (16.39 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-04-01 08:27 UTC, NISZ LibreOffice Team
Details
Example file saved in XLSX format (16.88 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-04-01 08:28 UTC, NISZ LibreOffice Team
Details
Screenshot (136.06 KB, image/png)
2019-04-01 08:28 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-04-01 08:26:40 UTC
Description:
Align Data series changes from Secondary Y axis to Primary Y axis when the document is saved as XLSX with LibreOffice Calc 6.3.0.0.alpha0+.

Steps to Reproduce:
    1. Create a new document in LibreOffice Calc 6.3.0.0.alpha0+.
    2. Insert a Line Chart with Points and Lines.
    3. Change the Align of the first Data Series to Secondary Y axis.
    4. Save the file as ODS.
    5. Save the file as XLSX.
    6. Compare the ODT and the XLSX file opened in LibreOffice Calc 6.3.0.0.alpha0+.
    7. View the attaches screenshot.
    8. Notice, that Secondary axis changes to Primary axis.

Actual Results:
Align Data series changes from Secondary Y axis to Primary Y axis.

Expected Results:
Align Data series should be Secondary Y axis.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.0.0.alpha0+
Build ID: ade1df0948563b532a5d293c31d46a4f042559ee
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-04-01 08:27:48 UTC
Created attachment 150439 [details]
Example ODS file
Comment 2 NISZ LibreOffice Team 2019-04-01 08:28:09 UTC
Created attachment 150440 [details]
Example file saved in XLSX format
Comment 3 NISZ LibreOffice Team 2019-04-01 08:28:46 UTC
Created attachment 150441 [details]
Screenshot
Comment 4 Balázs Varga 2019-04-01 12:11:21 UTC
Confirmed

with

Version: 6.3.0.0.alpha0+
Build ID: 210ed60686009128bc772af6ba41650ad17d40e1
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 5 Commit Notification 2019-04-02 06:35:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ad363fd42e439b43c57b6541988234fbaf1ddb30%5E%21

tdf#124463 XLSX export: fix splitDataSeriesByAxis

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-04-02 11:51:45 UTC
Also reproduced in

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)