tdf#124463 XLSX export: fix attached secondary axis series

If the first series attached to secondary axis, then export
those series first, which are attached to primary axis.
Also the MS Office export every time in this order.

Change-Id: I6e107aa990f9a1a1db49cae2a4f3c9d8a35fb54c